<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            android:title="@string/battery_main_colors_title" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="main_color"
        android:title="@string/main_color_title"
        android:summary="@string/main_color_summary"
        android:defaultValue="0x1A000000"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="text_color"
        android:title="@string/text_color_title"
        android:summary="@string/text_color_summary"
        android:defaultValue="0xFFFFFFFF"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="text_color_long_term"
        android:title="@string/text_color_long_term_title"
        android:summary="@string/text_color_long_term_summary"
        android:defaultValue="0xFFD7FFD7"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="grid_color"
        android:title="@string/grid_color_title"
        android:summary="@string/grid_color_summary"
        android:defaultValue="0x33CCCCCC"
        android:layout="@layout/preference_color" />

    <PreferenceCategory
            android:title="@string/battery_graph_colors_title" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="graph_line_color"
        android:title="@string/graph_line_color_title"
        android:summary="@string/graph_line_color_summary"
        android:defaultValue="0xFF00D505"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="graph_fill_color"
        android:title="@string/graph_fill_color_title"
        android:summary="@string/graph_fill_color_summary"
        android:defaultValue="0x66000000"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="charging_line_color"
        android:title="@string/charging_line_color_title"
        android:summary="@string/charging_line_color_summary"
        android:defaultValue="0xFF09A6D9"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="user_present_color"
        android:title="@string/user_present_color_title"
        android:summary="@string/user_present_color_summary"
        android:defaultValue="0xFF08A6D9"
        android:layout="@layout/preference_color" />

    <PreferenceCategory
        android:title="@string/battery_state_colors_title" />

    <com.danamir.batterymonitor.BatteryThresholdPreference
        android:key="battery_low_threshold"
        android:title="@string/battery_low_level_title"
        app:colorKey="battery_low_color"
        app:thresholdKey="battery_low_level"
        app:defaultColor="0xFFFFFF23"
        app:defaultThreshold="35" />

    <com.danamir.batterymonitor.BatteryThresholdPreference
        android:key="battery_critical_threshold"
        android:title="@string/battery_critical_level_title"
        app:colorKey="battery_critical_color"
        app:thresholdKey="battery_critical_level"
        app:defaultColor="0xFFFF3B1B"
        app:defaultThreshold="20" />

    <SeekBarPreference
        android:key="battery_blend_value"
        android:title="@string/battery_blend_value_title"
        android:summary="@string/battery_blend_value_summary"
        android:defaultValue="20"
        android:min="0"
        android:max="50"
        app:showSeekBarValue="true" />

    <com.danamir.batterymonitor.FloatSeekBarPreference
        android:key="low_usage_threshold"
        android:title="@string/low_usage_threshold_title"
        android:summary="@string/low_usage_threshold_summary"
        app:defaultFloatValue="1.0"
        app:minFloatValue="0.0"
        app:maxFloatValue="10.0"
        app:floatStepSize="0.1" />

    <com.danamir.batterymonitor.FloatBatteryThresholdPreference
        android:key="high_usage_threshold"
        android:title="@string/high_usage_threshold_title"
        app:colorKey="high_usage_color"
        app:thresholdKey="high_usage_level"
        app:defaultColor="0xBFFF00FF"
        app:defaultFloatThreshold="10.0"
        app:minValue="0.0"
        app:maxValue="20.0"
        app:stepSize="0.1" />

    <SeekBarPreference
        android:key="high_usage_range"
        android:title="@string/high_usage_range_title"
        android:summary="@string/high_usage_range_summary"
        android:defaultValue="30"
        android:max="240"
        android:min="0"
        app:showSeekBarValue="true"
        app:seekBarIncrement="1" />

    <SwitchPreferenceCompat
        android:key="high_usage_blend"
        android:title="@string/high_usage_blend_title"
        android:summary="@string/high_usage_blend_summary"
        android:defaultValue="true" />

    <com.danamir.batterymonitor.FloatSeekBarPreference
        android:key="blend_curve"
        android:title="@string/blend_curve_title"
        android:summary="@string/blend_curve_summary"
        app:defaultFloatValue="2.0"
        app:minFloatValue="1.0"
        app:maxFloatValue="100.0"
        app:floatStepSize="0.1"
        app:useLogScale="true" />

    <PreferenceCategory
            android:title="@string/battery_night_colors_title" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="graph_night_fill_color"
        android:title="@string/graph_night_fill_color_title"
        android:summary="@string/graph_night_fill_color_summary"
        android:defaultValue="0x1AB6B6FF"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.NightTimePreference
        android:key="night_time"
        android:title="@string/night_time_title"
        android:summary="" />

    <PreferenceCategory
        android:title="@string/fill_options_title" />

    <SwitchPreferenceCompat
        android:key="usage_rate_fill"
        android:title="@string/usage_rate_fill_title"
        android:summary="@string/usage_rate_fill_summary"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="usage_rate_line"
        android:title="@string/usage_rate_line_title"
        android:summary="@string/usage_rate_line_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="fill_with_line_color"
        android:title="@string/fill_with_line_color_title"
        android:summary="@string/fill_with_line_color_summary"
        android:defaultValue="false" />

</PreferenceScreen>
