<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.danamir.batterymonitor.ColorPreference
        android:key="main_color"
        android:title="@string/main_color_title"
        android:summary="@string/main_color_summary"
        android:defaultValue="0xFFFFFFFF"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="text_color"
        android:title="@string/text_color_title"
        android:summary="@string/text_color_summary"
        android:defaultValue="0xFF424242"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="grid_color"
        android:title="@string/grid_color_title"
        android:summary="@string/grid_color_summary"
        android:defaultValue="0x33CCCCCC"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="graph_line_color"
        android:title="@string/graph_line_color_title"
        android:summary="@string/graph_line_color_summary"
        android:defaultValue="0xFF4CAF50"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="graph_fill_color"
        android:title="@string/graph_fill_color_title"
        android:summary="@string/graph_fill_color_summary"
        android:defaultValue="0x33ADD8E6"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="charging_line_color"
        android:title="@string/charging_line_color_title"
        android:summary="@string/charging_line_color_summary"
        android:defaultValue="0xFFADD8E6"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="battery_low_color"
        android:title="@string/battery_low_color_title"
        android:summary="@string/battery_low_color_summary"
        android:defaultValue="0xFFFFFF3A"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="battery_critical_color"
        android:title="@string/battery_critical_color_title"
        android:summary="@string/battery_critical_color_summary"
        android:defaultValue="0xFFFF3C1C"
        android:layout="@layout/preference_color" />

    <com.danamir.batterymonitor.ColorPreference
        android:key="user_present_color"
        android:title="@string/user_present_color_title"
        android:summary="@string/user_present_color_summary"
        android:defaultValue="0xFFFFEB3B"
        android:layout="@layout/preference_color" />
</PreferenceScreen>
